--- a/pages/subpages/mine/order-center/subpages/goods-order/order-detail/index.wxml
+++ b/pages/subpages/mine/order-center/subpages/goods-order/order-detail/index.wxml
@@ -63,7 +63,7 @@
       <view class="shop-info row" wx:if="{{orderInfo.shopId}}" catchtap="navToShop" data-id="{{orderInfo.shopId}}">
         <image class="shop-logo" wx:if="{{orderInfo.shopLogo}}" src="{{orderInfo.shopLogo}}" />
         <view class="shop-name omit single">{{orderInfo.shopName}}</view>
-        <image style="width: 20rpx; height: 20rpx;" src="https://img.ubo.vip/mp/to-icon.png" />
+        <image style="width: 20rpx; height: 20rpx;" src="/images/arrow_gray.png" />
       </view>
       <view class="shop-name omit single" wx:if="{{!orderInfo.shopId}}">官方自营</view>
     </view>
