--- a/pages/subpages/mine/merchant-center/subpages/scenic-order/components/order-item/index.wxss
+++ b/pages/subpages/mine/merchant-center/subpages/scenic-order/components/order-item/index.wxss
@@ -5,7 +5,7 @@
   border-radius: 16rpx;
 }
 
-.list-header {
+.order-header {
   font-size: 28rpx;
 }
 .contact-btn {
@@ -16,7 +16,7 @@
   color: var(--blue-1);
 }
 
-.list-content {
+.order-content {
   margin: 24rpx 0;
 }
 
