--- a/pages/subpages/mine/merchant-center/subpages/scenic-order/index.wxss
+++ b/pages/subpages/mine/merchant-center/subpages/scenic-order/index.wxss
@@ -38,13 +38,13 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding: 0 24rpx;
   width: 100%;
   height: 40px;
   background: #fff;
   border-top: 1px solid #f5f6f8;
 }
 .menu-item {
+  flex: 1;
   height: 40px;
   color: #666;
   font-size: 14px;
