--- a/pages/subpages/mine/merchant-center/subpages/hotel-order/components/order-item/index.wxml
+++ b/pages/subpages/mine/merchant-center/subpages/hotel-order/components/order-item/index.wxml
@@ -1,4 +1,4 @@
-<wxs module="ORDER" src="../../../../../utils/scenicOrder.wxs" />
+<wxs module="ORDER" src="../../../../../utils/hotelOrder.wxs" />
 
 <view class="order-item" catchtap="navToDetail">
   <view class="order-header row between">
@@ -9,7 +9,7 @@
     <view class="order-status">{{ORDER.statusDesc(item.status)}}</view>
   </view>
   <view class="order-content">
-    <ticket-item ticketInfo="{{item.ticketInfo}}" />
+    <room-item info="{{item.roomInfo}}" />
   </view>
   <view class="order-footer">
     <view class="total-info row baseline">
@@ -37,6 +37,13 @@
         取消订单
       </button>
       <button class="btn" catchtap="navToDetail">查看详情</button>
+      <button 
+        class="btn active" 
+        wx:if="{{item.status === 201}}"
+        catchtap="checkedOrder"
+      >
+        确认订单
+      </button>
     </view>
   </view>
 </view>
