feat: 统一景点命名scenic-spot改为scenic

--- a/pages/subpages/mall/components/scenic-item/index.wxss
+++ b/pages/subpages/mall/components/scenic-item/index.wxss
@@ -1,38 +1,38 @@
-.scenic-spot-item {
+.scenic-item {
   margin-right: 12rpx;
   width: 220rpx;
   font-size: 0;
   border-radius: 12rpx;
   box-shadow: 0 0 12rpx 6rpx #f5f6f7;
 }
-.scenic-spot-image {
+.scenic-image {
   border-radius: 12rpx 12rpx 0 0;
   width: 100%;
   height: 140rpx;
 }
-.scenic-spot-info {
+.scenic-info {
   padding: 10rpx;
 }
-.scenic-spot-name {
+.scenic-name {
   color: #333;
   font-size: 24rpx;
   font-weight: bold;
 }
-.scenic-spot-rate-wrap {
+.scenic-rate-wrap {
   margin-top: 6rpx;
 }
-.scenic-spot-rate {
+.scenic-rate {
   margin-left: 4rpx;
   margin-top: -1rpx;
   color: #333;
   font-size: 20rpx;
 }
-.scenic-spot-distance {
+.scenic-distance {
   margin-top: 12rpx;
   color: #666;
   font-size: 20rpx;
 }
-.scenic-spot-distance-icon {
+.scenic-distance-icon {
   margin-right: 4rpx;
   width: 18rpx;
   height: 18rpx;
