--- a/pages/subpages/mall/scenic/index.wxml
+++ b/pages/subpages/mall/scenic/index.wxml
@@ -14,7 +14,7 @@
 </view>
 
 <view class="container" style="padding-top: {{statusBarHeight + 94}}px;">
-  <scenic-spot-item wx:for="{{scenicList}}" wx:key="index" item="{{item}}" />
+  <scenic-item wx:for="{{scenicList}}" wx:key="index" item="{{item}}" />
   <empty-illus wx:if="{{finished && !scenicList.length}}" desc="暂无列表" />
   <view class="no-more-tips" wx:if="{{finished && scenicList.length}}">～没有更多了～</view>
 </view>
