--- a/pages/subpages/mine/merchant-center/subpages/goods-order/components/order-item/index.wxml
+++ b/pages/subpages/mine/merchant-center/subpages/goods-order/components/order-item/index.wxml
@@ -1,7 +1,7 @@
 <wxs module="ORDER" src="../../../../../utils/order.wxs" />
 
 <view class="order-list">
-  <view class="order-item" wx:for="{{list}}" wx:key="index" catchtap="navToDetail" data-id="{{item.id}}">
+  <view class="order-item" wx:for="{{list}}" wx:key="index" catchtap="navToDetail">
     <view class="list-header row between">
       <view class="contact-btn row" catchtap="contact">
         <view>联系客户</view>
@@ -18,29 +18,21 @@
         <price-unit price="{{item.paymentAmount}}" color="#333" fontSize="26rpx" integerFontSize="36rpx" />
       </view>
       <view class="deliver-info-wrap" wx:if="{{item.status === 201}}">
-        <view class="deliver-info row" catchtap="copyOrderSn" data-sn="{{item.orderSn}}">
+        <view class="deliver-info row" catchtap="copyOrderSn">
           <image class="order-icon" src="./images/order.png" />
           <view class="order-sn">订单编号 {{item.orderSn}}</view>
           <image class="copy-icon" src="./images/copy.png" />
         </view>
-        <view class="deliver-info row top" catchtap="copyAddress" data-address="{{item.consignee}}，{{item.mobile}}，{{item.address}}">
+        <view class="deliver-info row top" catchtap="copyAddress">
           <image class="address-icon" src="./images/address.png" />
           <view class="address-detail">{{item.consignee}}，{{item.mobile}}，{{item.address}}</view>
           <image class="copy-icon" src="./images/copy.png" />
         </view>
       </view>
       <view class="btn-wrap">
-        <button
-          class="btn" 
-          wx:if="{{item.status === 101}}" 
-          catchtap="cancelOrder" data-id="{{item.id}}" data-index="{{index}}"
-        >取消订单</button>
-        <button class="btn" catchtap="navToDetail" data-id="{{item.id}}">查看详情</button>
-        <button 
-          class="btn active" 
-          wx:if="{{item.status === 201}}"
-          catchtap="deliverOrder" data-id="{{item.id}}" data-index="{{index}}"
-        >去发货</button>
+        <button class="btn" wx:if="{{item.status === 101}}" catchtap="cancelOrder">取消订单</button>
+        <button class="btn" catchtap="navToDetail">查看详情</button>
+        <button class="btn active" wx:if="{{item.status === 201}}" catchtap="deliverOrder">去发货</button>
       </view>
     </view>
   </view>
